--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-table": "^1.57.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
